src/frontend/components/CreatePost/CreatePost.css
input[type="file"] {
  display: none;
}
.create-btn {
  position: fixed;
  bottom: 10%;
  right: 10%;
  cursor: pointer;
}

.create-modal {
  z-index: 100;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 1rem;
  box-shadow: var(--box-shadow);
  border-radius: 1rem;
}
.upload-img-btn {
  display: flex;
  align-items: center;
  gap: 10px;
  width: calc(100% - 10px);
  background-color: var(--secondary-color);
  padding: 5px;
  border-radius: 10px;
  color: var(--primary-color);
}
.overlay {
  position: fixed;
  height: 100vh;
  width: 100vw;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 98;
}
.preview-img {
  width: 100px;
  margin: auto;
}
.caption-container {
  padding: 10px;
}
.post-btn {
  padding: 10px 20px;
  color: var(--secondary-color);
  border: none;
  width: fit-content;
  border: 1px solid var(--secondary-color);
  background-color: var(--primary-color);
  cursor: pointer;
}

